# python-in-a-box

./: .gitignore  .pib.yml  .pre-commit-config.yaml  .vale.ini  LICENSE  README.md  cookiecutter.json  pyproject.toml  test.sh
.github/deprecated/: self-test.yml
.github/scenarios/: 0.docstring-0.sphinx-0.toml-0.typing-0.workflows.json
.github/scripts/: cli_test.sh  gitleaks.sh  release_test.sh  setup.sh  shellcheck.sh  step-setup-environment.sh  template.sh
.github/workflows/: cookiecutter.yml  hostmachine.yml  self-test.yml  workflow-template-test.yml
hooks/: post_gen_project.py  post_gen_project.sh
hooks/assets/: cli.yml
hooks/tests/: conftest.py  test_filter_docstrings.py  test_filter_sphinx.py  test_formatting_2space.py  test_hook_filter_docstrings.py  test_hook_filter_sphinx.py  test_hook_formatting_2space.py  test_hook_git.py  test_hook_poetry.py  test_hook_precommit.py  test_render.py  test_system_calls_git.py  test_system_calls_poetry.py  test_template.py
markdown/: CONFIGURATION.md  CUSTOMIZATION.md  DEPENDENCIES.md  ENVIRONMENT.md
scripts/: shellcheck.sh  test.sh  update.sh
scripts/terminalizer/: demo.yml  render.sh
{{cookiecutter.project_slug}}/: .aspell.pws  .coveragerc  .dockerignore  .gitignore  .isort.cfg  .markdownlint.yml  .pre-commit-config.yaml  .pylint.rc  .readthedocs.yml  .yamllint.yml  README.md  SPEC.md  container  development.env  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.py  testing-shim  testing_shim
{{cookiecutter.project_slug}}/.github/: dependabot.yml
(+73 files in other folders)
